# CompetitiveProgramming

./: .gitignore  Cargo.toml  README.md
Codeforces/Golang/800-1000/1030A - In Search of an Easy Problem/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/110A - Nearly Lucky Number/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/112A - Petya and Strings/: README.md  main.go
Codeforces/Golang/800-1000/116A - Tram/: main.go
Codeforces/Golang/800-1000/1328A - Divisibility Problem/: README.md  go.mod
Codeforces/Golang/800-1000/141A - Amusing Joke/: README.md  go.mod
Codeforces/Golang/800-1000/144A - Arrival of the General/: README.md  go.mod
Codeforces/Golang/800-1000/148A - Insomnia cure/: README.md  main.go
Codeforces/Golang/800-1000/151A - Soft Drinking/: README.md  main.go
Codeforces/Golang/800-1000/155A -  I_love_%username%/: README.md
Codeforces/Golang/800-1000/158A - Next Round/: README.md  go.mod
Codeforces/Golang/800-1000/1669A - Division/: go.mod  main.go
Codeforces/Golang/800-1000/1676A - Lucky?/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/1703A - YES or YES?/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/1899A - Game with Integers/: README.md  main.go
Codeforces/Golang/800-1000/200B - Drinks/: go.mod
Codeforces/Golang/800-1000/231A - Team/: README.md  go.mod
Codeforces/Golang/800-1000/236A - Boy or Girl/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/263A - Beautiful Matrix/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/266A - Stones on the Table/: go.mod  main.go
Codeforces/Golang/800-1000/266B - Queue at the School/: README.md  go.mod
Codeforces/Golang/800-1000/268A - Games/: go.mod
Codeforces/Golang/800-1000/271A - Beautiful Year/: README.md  go.mod
Codeforces/Golang/800-1000/281A - Word Capitalization/: go.mod  main.go
Codeforces/Golang/800-1000/282A - Bit ++/: README.md
Codeforces/Golang/800-1000/288A - Is your horseshoe on the other hoof?/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/339A - Helpful Maths/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/344A - Magnets/: README.md  main.go
Codeforces/Golang/800-1000/381A - Sereja and Dima/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/41A - Translation/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/427A - Police Recruits/: main.go
Codeforces/Golang/800-1000/467A - George and Accommodation/: README.md
Codeforces/Golang/800-1000/469A - I Wanna Be the Guy/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/486A - Calculating Function/: go.mod  main.go
Codeforces/Golang/800-1000/4A - Watermelon/: README.md  go.mod
Codeforces/Golang/800-1000/510A - Fox And Snake/: go.mod  main.go
Codeforces/Golang/800-1000/520A - Pangram/: README.md
Codeforces/Golang/800-1000/546A - Soldier and Bananas/: main.go
Codeforces/Golang/800-1000/59A - Word/: README.md  go.mod
Codeforces/Golang/800-1000/617A - Elephant/: main.go
Codeforces/Golang/800-1000/61A - Ultra-Fast Mathematician/: README.md  go.mod
Codeforces/Golang/800-1000/677A - Vanya and Fence/: go.mod
Codeforces/Golang/800-1000/705A - Hulk/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/71A - Way Too Long Words/: go.mod
Codeforces/Golang/800-1000/723A - The New Year: Meeting Friends/: README.md  main.go
Codeforces/Golang/800-1000/732A - But a Shovel/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/734A - Anton and Danik/: README.md  go.mod
Codeforces/Golang/800-1000/750A - New Year and Hurry/: README.md  main.go
Codeforces/Golang/800-1000/785A - Anton and Polyhedrons/: README.md  go.mod  main.go
Codeforces/Golang/800-1000/791A - Bear and Big Brother/: README.md  main.go
Codeforces/Golang/800-1000/996A - Hit the Lottery/: go.mod  main.go
Codeforces/Golang/800/112A - Petya and Strings/: go.mod
Codeforces/Golang/800/116A - Tram/: README.md  go.mod
Codeforces/Golang/800/1328A - Divisibility Problem/: main.go
Codeforces/Golang/800/1335A - Candies and Two Sisters/: README.md  go.mod  main.go
Codeforces/Golang/800/1352A - Sum of Round Numbers/: README.md  go.mod  main.go
Codeforces/Golang/800/136A - Presents/: README.md  go.mod  main.go
Codeforces/Golang/800/141A - Amusing Joke/: main.go
Codeforces/Golang/800/144A - Arrival of the General/: main.go
Codeforces/Golang/800/148A - Insomnia cure/: go.mod
Codeforces/Golang/800/151A - Soft Drinking/: go.mod
Codeforces/Golang/800/155A -  I_love_%username%/: go.mod  main.go
Codeforces/Golang/800/158A - Next Round/: main.go
Codeforces/Golang/800/1669A - Division/: README.md
Codeforces/Golang/800/a/: go.mod  (+1 more)
(+270 files in other folders)
