[workspace]
members = [
"Codeforces/Rust/800-1000/112A - Petya and Strings",
"Codeforces/Rust/800-1000/158A - Next Round",
"Codeforces/Rust/800-1000/231A - Team", 
"Codeforces/Rust/800-1000/236A - Boy or Girl", 
"Codeforces/Rust/800-1000/263A - Beautiful Matrix",
"Codeforces/Rust/800-1000/281A - Word Capitalization",
"Codeforces/Rust/800-1000/282A - Bit ++", 
"Codeforces/Rust/800-1000/339A - Helpful Maths",
"Codeforces/Rust/800-1000/4A - Watermelon",
"Codeforces/Rust/800-1000/50A - Domino piling", 
"Codeforces/Rust/800-1000/617A - Elephant",
"Codeforces/Rust/800-1000/71A - Way Too Long words", 
"Codeforces/Rust/800-1000/791A - Bear and Big Brother",
]
resolver = "2"
