[workspace]
members = [
"Codeforces/Rust/800/467A - George and Accommodation",
"Codeforces/Rust/800/1030A - In Search of an Easy Problem",
"Codeforces/Rust/800/110A - Nearly Lucky Number",
"Codeforces/Rust/800/112A - Petya and Strings", 
"Codeforces/Rust/800/116A - Tram",
"Codeforces/Rust/800/158A - Next Round",
"Codeforces/Rust/800/231A - Team", 
"Codeforces/Rust/800/236A - Boy or Girl", 
"Codeforces/Rust/800/263A - Beautiful Matrix", 
"Codeforces/Rust/800/266A - Stones on the Table", 
"Codeforces/Rust/800/266B - Queue at the School", 
"Codeforces/Rust/800/271A - Beautiful Year",
"Codeforces/Rust/800/281A - Word Capitalization",
"Codeforces/Rust/800/282A - Bit ++", 
"Codeforces/Rust/800/339A - Helpful Maths", 
"Codeforces/Rust/800/41A - Translation",
"Codeforces/Rust/800/4A - Watermelon",
"Codeforces/Rust/800/50A - Domino piling", 
"Codeforces/Rust/800/546A - Soldier and Bananas", 
"Codeforces/Rust/800/59A - Word", 
"Codeforces/Rust/800/617A - Elephant", 
"Codeforces/Rust/800/677A - Vanya and Fence",
"Codeforces/Rust/800/71A - Way Too Long words", 
"Codeforces/Rust/800/734A - Anton and Danik", 
"Codeforces/Rust/800/791A - Bear and Big Brother", 
"Codeforces/Rust/800/977A - Wrong Subtraction", 
"Codeforces/Rust/800/486A - Calculating Function", 
"Codeforces/Rust/800/344A - Magnets", 
"Codeforces/Rust/800/200B - Drinks", 
"Codeforces/Rust/800/136A - Presents", 
"Codeforces/Rust/800/288A - Is your horseshoe on the other hoof?", 
"Codeforces/Rust/800/61A - Ultra-Fast Mathematician", 
"Codeforces/Rust/800/705A - Hulk", 
"Codeforces/Rust/800/1328A - Divisibility Problem", 
"Codeforces/Rust/800/520A - Pangram", 
"Codeforces/Rust/800/144A - Arrival of the General", 
"Codeforces/Rust/800/469A - I Wanna Be the Guy", 
"Codeforces/Rust/800/996A - Hit the Lottery", 
"Codeforces/Rust/800/148A - Insomnia cure", 
"Codeforces/Rust/800/443A - Anton and Letters", 
"Codeforces/Rust/800/785A - Anton and Polyhedrons", 
"Codeforces/Rust/800/510A - Fox And Snake", 
"Codeforces/Rust/800/1335A - Candies and Two Sisters", 
"Codeforces/Rust/800/1742A - Sum", 
"Codeforces/Rust/800/268A - Games", 
"Codeforces/Rust/800/1352A - Sum of Round Numbers", 
"Codeforces/Rust/800/141A - Amusing Joke", 
"Codeforces/Rust/800/723A - The New Year: Meeting Friends", 
"Codeforces/Rust/800/1703A - YES or YES?", 
"Codeforces/Rust/800/427A - Police Recruits", 
"Codeforces/Rust/800/151A - Soft Drinking", 
"Codeforces/Rust/800/155A -  I_love_%username%", 
"Codeforces/Rust/800/630A - Again Twenty Five!", 
"Codeforces/Rust/800/1899A - Game with Integers", 
"Codeforces/Rust/800/750A - New Year and Hurry", 
"Codeforces/Rust/800/381A - Sereja and Dima", 
"Codeforces/Rust/800/1669A - Division", 
"Codeforces/Rust/800/732A - But a Shovel", 
"Codeforces/Rust/800/1676A - Lucky?", 
]
resolver = "2"
